Closed
Bug 167782
Opened 23 years ago
Closed 23 years ago
widget/src/gtk2/nsWindow.cpp needs to recover from nsITimer changes
Categories
(Core :: XUL, defect)
Tracking
()
VERIFIED
FIXED
Future
People
(Reporter: havardw+bugzilla, Assigned: blizzard)
References
Details
Attachments
(1 file, 1 obsolete file)
|
824 bytes,
patch
|
dougt
:
review+
alecf
:
superreview+
|
Details | Diff | Splinter Review |
configured with ./configure --prefix=/gnome2 --enable-default-toolkit=gtk2
--disable-debug --disable-mailnews
Compile fails with this message:
nsWindow.cpp: In method `void nsWindow::OnDragLeaveEvent (GtkWidget *,
GdkDragContext *, unsigned int, void *)':
nsWindow.cpp:1574: no matching function for call to
`nsDerivedSafe<nsITimer>::Init (void (&) (nsITimer *, void *), nsWindow
*const, int)'
../../../dist/include/xpcom/nsITimer.h:168: candidates are: nsresult
nsITimer::Init (nsIObserver *,
unsigned int, unsigned int)
Comment 1•23 years ago
|
||
-> blizzard (although this seems like more of a tech support request than an
actual bug report).
Assignee: jaggernaut → blizzard
Severity: blocker → normal
Target Milestone: --- → Future
1.38 <blizzard@redhat.com> 10 Aug 2002 11:21
1572 blizzard 1.38 NS_ASSERTION(mDragLeaveTimer, "Failed to create drag
leave timer!");
1573 // fire this baby asafp
1574 mDragLeaveTimer->Init(DragLeaveTimerCallback, this, 0);
this is a result of Bug 157136 Freeze core component scripting interfaces
this is the general form of the change. If you provide a tinderbox to
MozillaTest or something I can commit patches until it goes green.
- mTimer->Init(NS_STATIC_CAST(nsITimerCallback*, this),
kScrollPosCheckWait, PR_TRUE, NS_TYPE_REPEATING_SLACK);
+ mTimer->InitWithCallback(NS_STATIC_CAST(nsITimerCallback*, this),
kScrollPosCheckWait, nsITimer::TYPE_REPEATING_SLACK);
Status: UNCONFIRMED → NEW
Depends on: 157136
Ever confirmed: true
Summary: Error compiling widget/src/gtk2/nsWindow.cpp → widget/src/gtk2/nsWindow.cpp needs to recover from nsITimer changes
Comment 3•23 years ago
|
||
Chris, Sorry I missed that one. Timeless got the fix right.
Comment 4•23 years ago
|
||
r/sr=alecf
note that the checkin appears to have busted a bunch of other things I'll stick
a patch up somewhere for them after I find a good way to figure out which files
were and were not touched (lxr+bonsai correlation...)
Comment 6•23 years ago
|
||
Comment on attachment 98646 [details] [diff] [review]
suggested patch
r=dougt
sr=alecf (from above)
Attachment #98646 -
Flags: superreview+
Attachment #98646 -
Flags: review+
checked in
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
ok, i spent time looking through bonsai/lxr, i believe this really was the only
outlier, sorry for the concern :-)
| Assignee | ||
Comment 9•23 years ago
|
||
This still doesn't build for me. The callback doesn't match the prototype.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 10•23 years ago
|
||
doh!
it should be: InitWithFuncCallback. Blizzard, can you verify this?
| Assignee | ||
Comment 11•23 years ago
|
||
Attachment #98646 -
Attachment is obsolete: true
Comment 12•23 years ago
|
||
Comment on attachment 98921 [details] [diff] [review]
patch
r=dougt
Attachment #98921 -
Flags: review+
Comment 13•23 years ago
|
||
I tried this patch. It makes build ok.
Comment 14•23 years ago
|
||
Comment on attachment 98921 [details] [diff] [review]
patch
sr=alecf
Attachment #98921 -
Flags: superreview+
| Assignee | ||
Comment 15•23 years ago
|
||
Checked in. Thanks, guys!
Status: REOPENED → RESOLVED
Closed: 23 years ago → 23 years ago
Resolution: --- → FIXED
Comment 16•23 years ago
|
||
vrfy fixed per bolian yin
sorry about that, i should have gotten this right...
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•