Bug 167782 widget/src/gtk2/nsWindow.cpp needs to recover from nsITimer changes r=dougt sr=alecf