widget/src/gtk2/nsWindow.cpp
@@ -1571,7 +1571,7 @@ nsWindow::OnDragLeaveEvent(GtkWidget *aWidget,
     mDragLeaveTimer = do_CreateInstance("@mozilla.org/timer;1");
     NS_ASSERTION(mDragLeaveTimer, "Failed to create drag leave timer!");
     // fire this baby asafp
-    mDragLeaveTimer->Init(DragLeaveTimerCallback, this, 0);
+    mDragLeaveTimer->InitWithCallback(DragLeaveTimerCallback, 0, nsITimer::TYPE_ONE_SHOT);
 }
 
 gboolean
